# videofiles_processing

./: .gitignore  README.md  VideoCompressor.spec  build.py  build.rs  compress_video.bat  config.py  dialogs.py  ffmpeg_downloader.py  ffmpeg_handler.py  ffmpeg_utils.py  gui_logger.py  main.py  threads.py  todo.md  ui.py  video_processor.py  video_size_estimator.py  youtube_downloader.py
batch_lang_oldcode/: audio change tone.bat  concat.bat  denoise_audio первый этап.bat  dyn audio norm.bat  marvel_rivals.bat  script_only_normaudio.bat
batch_lang_oldcode/dont_first_deal/: concat and fade (end editing).bat  denoise audio v2.bat  script_double_skype_vertical.bat  script_start editing.bat  затух и осветл.bat  наложение аудио друг на друга.bat
batch_lang_oldcode/garbage/: change the sound from a file.bat  test.sh  замена авторедактору тест.bat
batch_lang_oldcode/python_scripts/: ffmpeg denoise.py  make_marvel_rivals_video.py  progress_ffmpeg.py  silence_cutter.py  start_script.py  test debug.py  test_make_subs.py  test_shorts.py  trim_s_python_run_test.bat  trim_silenceV2  utils.py
old code/: .gitignore  config.py  todo.md  ui.py
old code/test/: debug_run.py
old_code/videofiles_processing/: Cargo.toml
old_code/videofiles_processing/src/: ffmpeg_bin.rs  ffmpeg_utils.rs  ffmpeg_wrapper.rs  main.rs  modals.rs  ui.rs
rnnoise-models/beguiling-drafter-2018-08-30/: weights.hdf5.xz
src/: config.rs  ffmpeg_utils.rs  main.rs  modals.rs  ui.rs
tests/: test_drop_files.py  test_page_methods.py  test_remove_silence.py  test_translate.py  youtube_downloader.py
