[package]
name = "video_compressor"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["advanced"] }
iced_aw = { version = "0.9", features = ["card"] }
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["stream", "blocking"] }
futures-util = "0.3"
zip = "0.6"